Uploaded pdf of status report week 1

--- a/status_report/status_report_week1.tex
+++ b/status_report/status_report_week1.tex
@@ -3,7 +3,7 @@
 \usepackage{times}
     \usepackage{fullpage}
     
-    \title{ {{Tracing Footprints of the Human Immune System in Virus Genomes with Machine Learning}}
+    \title{ {{Tracing Footprints of the Human Immune System in Virus Genomes with Machine Learning}} }
     \author{ {{Chae-Ryeong Yeo}} - {{2458600y}} }
 
     \begin{document}
@@ -17,7 +17,6 @@
 \subsection{Achievement}\label{proposal}
 
 \begin{itemize}
-    \tightlist
 \item Created a directory structure for project and stored in version control on remote private GitHub repository.
 \item Created research proposal and project timeline.
 \item Read through 4 relevant research papers and briefly summarised each.
@@ -28,7 +27,6 @@
 \subsection{Questions}\label{progress}
 
 \begin{itemize}
-    \tightlist
 \item Meaning of topic: uncover subtle/hidden clues or indications of the human immune system's influence on virus genomes? Similarities of human T cell genome and virus genome? Must it be between the human immune system cell genome and a virus genome where the virus has attacked that human before?
 \item Are supervised or unsupervised learning methods appropriate? (Or should I use reinforcement learning to maximize reward signals? What will this reward signal be for?) I think unsupervised learning is most appropriate because we don’t know the similarities between human immune system and virus genome. However, for some similar proteins found for both virus genome and human immune cells, I can use supervised learning - however, for what goal? For classification - whether it belongs to a virus or human? I think this is not the goal of this project. But I’m not sure what the goal is for the machine learning algorithm. Must it first know which are the footprints of the human immune system in the virus genome and try to find the similar parts to that in the virus genome for as many viruses as possible?
 \item Am I only concerned about the impact of the human immune system on the virus genome, and not the other way around?
@@ -38,7 +36,6 @@
 \subsection{Plan for rest of week 1, and week 2}\label{plan}
 
 \begin{itemize}
-    \tightlist
 \item Create a directory just for relevant research papers and its summaries, and read up on at least 10 more related research papers, summarise the findings and note down which parts of it can also be implemented for my project.
 \item Familiarise with bioinformatics concepts - continue the Bioinformatics Specialisation course in Coursera and always keep track of relevant findings.
 \item Write the minute on Moodle and review afterwards.
@@ -47,3 +44,4 @@
 
 
 \end{document}
+
