--- a/status_report/status_report_week1.tex
+++ b/status_report/status_report_week1.tex
@@ -28,9 +28,10 @@
 
 \begin{itemize}
 \item Meaning of topic: uncover subtle/hidden clues or indications of the human immune system's influence on virus genomes? Similarities of human T cell genome and virus genome? Must it be between the human immune system cell genome and a virus genome where the virus has attacked that human before?
-\item Are supervised or unsupervised learning methods appropriate? (Or should I use reinforcement learning to maximize reward signals? What will this reward signal be for?) I think unsupervised learning is most appropriate because we don’t know the similarities between human immune system and virus genome. However, for some similar proteins found for both virus genome and human immune cells, I can use supervised learning - however, for what goal? For classification - whether it belongs to a virus or human? I think this is not the goal of this project. But I’m not sure what the goal is for the machine learning algorithm. Must it first know which are the footprints of the human immune system in the virus genome and try to find the similar parts to that in the virus genome for as many viruses as possible?
-\item Am I only concerned about the impact of the human immune system on the virus genome, and not the other way around?
-\item Is my project a research-focused project? Or is it a software focused project? Is my goal to produce an end to end learning system?
+\item Should I be using supervised or unsupervised learning? Unsupervised learning may be appropriate as we don’t know the similarities between human immune system and virus genome. However, for some similar proteins found for both virus genome and human immune cells, I can use supervised learning. What will be the goal of this? Would it be to figure out types of virus sharing the same protein as those found in human immune cells for virus immunity?
+\item Can a model be used to find out all the similar proteins between human immune cell genome and virus genome, and the type of the protein?
+\item Is the project only concerned about the impact of the human immune system on the virus genome, and not the other way around?
+\item Is my project a research-focused project? Does the goal of this project involve implementing an end to end learning system?
 \end{itemize}
 
 \subsection{Plan for rest of week 1, and week 2}\label{plan}
